--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- Comment header --> 
 <html lang="en">
     <head>
-        <title> Carters Bikes</title>
+        <title> Carters Bikes github lab</title>
         <link rel="stylesheet" href="CSS%2520Formating/main.css">
     </head>
     <body>
